nn's linear algebra skeleton

--- a/Линейная алгебра.md
+++ b/Линейная алгебра.md
@@ -1,1 +1,14 @@
 # Линейная алгебра
+
+* [Матричные операции](#матричные-операции)
+  * [Умножение](#умножение)
+  * [Транспонирование](#Транспонирование)
+  * [Обращение](#Обращение)
+
+## Матричные операции
+
+### Умножение
+
+### Транспонирование
+
+### Обращение
