--- a/Нейронные сети.md
+++ b/Нейронные сети.md
@@ -1,8 +1,11 @@
 # Нейронные сети
 
 ## Связанные темы
-* [Линейная алгебра](Линейная%20алгебра.md#линейная-алгебра)
+* [Линейная алгебра](Линейная%20алгебра.md)
   * [Матричные операции](Линейная%20алгебра.md#матричные-операции)
     * [Умножение](Линейная%20алгебра.md#умножение)
     * [Транспонирование](Линейная%20алгебра.md#транспонирование)
     * [Обращение](Линейная%20алгебра.md#обращение)
+* [Математический анализ](Математический%20Анализ.md)
+  * [Производные и градиенты](Математический%20Анализ.md#производные-и-градиенты)
+  * [Оптимизация функций](Математический%20Анализ.md#оптимизация-функций)
