--- a/Нейронные сети.md
+++ b/Нейронные сети.md
@@ -9,3 +9,6 @@
 * [Математический анализ](Математический%20Анализ.md)
   * [Производные и градиенты](Математический%20Анализ.md#производные-и-градиенты)
   * [Оптимизация функций](Математический%20Анализ.md#оптимизация-функций)
+* [Теория вероятностей](Теория%20вероятностей.md)
+  * [Распределения вероятностей](Теория%20вероятностей.md#распределения-вероятностей)
+  * [Условная вероятность и Байесовские методы](Теория%20вероятностей.md#условная-вероятность-и-байесовские-методы)
